@@ -1,5 +1,8 @@
 Changelog for GEMC
 
+11/25/15
+- fixed replicas routines.
+
 11/19/15
 - fixed vertex for cosmic rays
 
